# TicTacToe

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/game/: Board.cpp  Board.h  Game.cpp  Game.h  Player.h
tests/: CMakeLists.txt
